# cuda-legacy

./: CMakeLists.txt  test.cu
